Create GameState class

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 
 	<link rel="stylesheet" href="css/style.css"/>
 
-	<script src="js/camera.js"></script>
+	<script src="js/game_state.js"></script>
 	<script src="js/key.js"></script>
 	<script src="js/keyboard.js"></script>
 	<script src="js/src_image.js"></script>
+	
 	<script src="js/main.js"></script>
 </head>
 
