Add guardian class

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 	<link rel="stylesheet" href="css/style.css"/>
 
 	<script src="js/game_state.js"></script>
+	<script src="js/guardian.js"></script>
 	<script src="js/key.js"></script>
 	<script src="js/keyboard.js"></script>
 	<script src="js/src_image.js"></script>
 	<script src="js/volume_audio.js"></script>
-	
+
 	<script src="js/main.js"></script>
 </head>
 
