--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<script src="js/guardian.js"></script>
 	<script src="js/key.js"></script>
 	<script src="js/keyboard.js"></script>
+	<script src="js/questions.js"></script>
 	<script src="js/src_image.js"></script>
 	<script src="js/volume_audio.js"></script>
 
