Add README.md and change CSS

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width,initial-scale=1.0"/>
 
-	<title>TITLE HERE</title>
+	<title>Nirvana</title>
 
 	<link rel="stylesheet" href="css/style.css"/>
 
@@ -22,16 +22,6 @@
 
 <body onload="main()">
 	<canvas id="canvas" width="768" height="256"></canvas>
-
-	<h1>TITLE HERE</h1>
-
-	<p>This is our game for the <a href="https://ldjam.com/events/ludum-dare/47">Ludum Dare 47</a> Jam in October 2020.
-	It is the first time we participate.</p>
-
-	<p>Use the arrow keys to navigate and the X key to perform an action.</p>
-
-	<p>The game is licensed under the MIT (Expat) License.
-	<a href="LICENSE">Read our license here.</a></p>
 </body>
 
 </html>
