Move css/style.css into index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
 
 	<title>Nirvana</title>
 
-	<link rel="stylesheet" href="css/style.css"/>
+	<style>
+		body {
+			background-color: black;
+			margin: 0;
+			padding: 0;
+		}
+	</style>
 
 	<script src="js/audio_wrapper.js"></script>
 	<script src="js/game_state.js"></script>
