Relicense and ensure REUSE compliance

--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<!--
+SPDX-FileCopyrightText: 2020, 2023 dranjohn
+SPDX-FileCopyrightText: 2020, 2023 Daniel Kalak
+SPDX-License-Identifier: GPL-3.0-or-later
+-->
 <html lang="en">
 
 <head>
